# meme

./: .env.dev  .gitignore  README.md  auto-imports.d.ts  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
script/: build-rs.js  collect.js  collect.sh  install.sh  install_linux.sh  install_termux.sh  package_linux.sh
script/.config/systemd/user/: meme.service
script/.local/app/meme/: install.sh
src/: App.vue  main.ts
src-rs/: .gitignore  Cargo.toml
src-rs/resource/: .env  copy_img_win.ps1  meme.db
src-rs/resource/linux/: install.sh  uninstall.sh  uninstall_termux.sh
src-rs/resource/linux/.local/share/applications/: meme_web.desktop
src-rs/resource/sqlite3_win_x64/: sqlite3.exp  sqlite3.lib
src-rs/resource/termux/: install.sh  uninstall.sh
src-rs/resource/universal/: .env
src-rs/src/: configs.rs  main.rs  models.rs  params.rs  schema.rs
src-rs/src/actions/: folder_actions.rs  img_actions.rs  keyword_actions.rs  mod.rs  style_actions.rs  watch_actions.rs
src-rs/src/util/: files.rs  mod.rs  path_bufs.rs  pinyins.rs  uuids.rs  vecs.rs
src/components/: Help.vue  ImgLocation.vue  Search.vue
src/directives/: longPress.ts
src/stores/: api.ts  axios.ts  config.ts  notification.js  util.ts
src/views/: HomeView.vue
